--- a/index.html
+++ b/index.html
@@ -29,6 +29,18 @@
             <!-- TODO: Put the pigeons in love MP4 video here-->
             <!-- This video should have controls and two track tags (for example, for English AND French subtitles) -->
         </div>
+
+        <video controls>
+            <source src="./assets/videos/dog-video.mp4" type="video/mp4" />
+            <track
+                src="./assets/text-tracks/dog-video.vtt"
+                kind="captions"
+                srclang="English"
+                label="English Captions"/>
+        </video>
+
+
+
     </main>
 </body>
 </html>
