--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
                 srclang="English"
                 label="English Captions"/>
         </video>
+        <video controls>
+            <source src="./assets/videos/pigeons-in-love.mp4" type="video/mp4" />
+            <track
+                src="./assets/text-tracks/pigeans-in-love-english.vtt"
+                kind="captions"
+                srclang="English"
+                label="English Captions"/>
+        </video>
 
 
 
