--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
             <source src="./assets/videos/pigeons-in-love.mp4" type="video/mp4" />
             <track
                 src="./assets/text-tracks/pigeons.vtt"
-                kind="captions"
+                kind="subtitles"
                 srclang="English"
-                label="English Captions"/>
+                label="English Subtitles"/>
         </video>
 
 
