--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             <track
                 src="./assets/text-tracks/pigeons.vtt"
                 kind="subtitles"
-                srclang="English"
-                label="English Subtitles"/>
+                srclang="Spanish"
+                label="Spanish Subtitles"/>
         </video>
 
 
