--- a/index.html
+++ b/index.html
@@ -1,3 +1,22 @@
+<!--
+
+https://www.w3schools.com/html/html_form_input_types.asp
+
+audio
+
+https://www.w3docs.com/learn-html/html-audio-tag.html
+
+
+video
+
+https://www.w3docs.com/learn-html/html-video-tag.html
+
+
+-->
+
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
